--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>in our doubt section.</h2>
         </div>
         <div class="div3">
-            Get 30% Off by aplying code while purchasing course
+            Get 30% Off by applying code while purchasing course
         </div>
         <div class="div4">
             We assure that your hard work & our teachin will give bright result
